--- a/.gitignore
+++ b/.gitignore
@@ -168,3 +168,4 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,intellij,kotlin
+/local.properties
