--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,16 @@
-root = true
+root=true
 
 [*]
-indent_size = 2
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+indent_size=2
+end_of_line=lf
+charset=utf-8
+trim_trailing_whitespace=true
+insert_final_newline=true
 
 [*.{kt,kts}]
-ij_kotlin_imports_layout = *
+ij_kotlin_imports_layout=*
+ij_kotlin_name_count_to_use_star_import=99
+ij_kotlin_name_count_to_use_star_import_for_members=99
 
 [*.xml]
-indent_size = 4
+indent_size=4
