--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,5 @@ gradle-app.setting
 
 # End of https://www.toptal.com/developers/gitignore/api/gradle,intellij,kotlin
 /local.properties
+
+.kotlin
